overflow trial fix

--- a/style.css
+++ b/style.css
@@ -101,6 +101,10 @@ hr {
 	background-color: var(--inverted-color);
 }
 
+section {
+	overflow-x: hidden;
+}
+
 .section-title {
 	font-style: normal;
 	font-weight: normal;
@@ -384,6 +388,7 @@ hr {
 	text-align: center;
 	/* fixing jump to in-page anchor */
 	padding-top: 8vh;
+	padding-bottom: 20vh;
 	background-color: var(--dark-blue);
 }
 
@@ -424,7 +429,7 @@ hr {
 
 #faqs-wrapper {
 	margin-top: 30vh;
-	margin-bottom: 7.5em;
+	margin-bottom: 7vh;
 }
 
 #faqs-content > .section-title {
@@ -859,7 +864,7 @@ footer {
 	}
 
 	#faqs-wrapper {
-		margin-top: 0;
+		margin-top: 3vh;
 	}
 
 	.faqs-item {
